--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # config
 spring.output.ansi.enabled = ALWAYS
+
+#Properties
+url.via.cep=https://viacep.com.br/ws
