Add spring security

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -9,5 +9,14 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=false
 
-# config
+# Config
 spring.output.ansi.enabled = ALWAYS
+
+# Security
+secret.token.jwt = ${JWT_SECRET:12345678}
+
+# User Credentials test
+user.login=${USER_EMAIL:israelslf22@gmail.com}
+user.password.criptografada=${USER_PASSWORD_CRIPTOGRAFADA:$2a$12$nA/7DjXyUWXVkQ8CgNfcQuTS4P0pf/KhRzjGlEnQs50hepGE8za8e}
+user.password.descriptografada=${USER_PASSWORD_DESCRIPTOGRAFADA:123456}
+
