Add docker-compose enviroment build

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1/db_test_florescer
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:127.0.0.1:3306}/db_test_florescer?createDatabaseIfNotExist=true
 
 spring.datasource.username=root
 spring.datasource.password=admin
@@ -20,3 +20,4 @@ user.login=${USER_EMAIL:israelslf22@gmail.com}
 user.password.criptografada=${USER_PASSWORD_CRIPTOGRAFADA:$2a$12$nA/7DjXyUWXVkQ8CgNfcQuTS4P0pf/KhRzjGlEnQs50hepGE8za8e}
 user.password.descriptografada=${USER_PASSWORD_DESCRIPTOGRAFADA:123456}
 
+server.port=8081
