--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1/db_florescer
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:127.0.0.1:3306}/db_florescer?createDatabaseIfNotExist=true
 
 spring.datasource.username=root
 spring.datasource.password=admin
@@ -11,3 +11,6 @@ spring.jpa.defer-datasource-initialization=false
 
 # config
 spring.output.ansi.enabled = ALWAYS
+
+# Security
+secret.token.jwt = ${JWT_SECRET:87654321}
