--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,13 +17,16 @@ services:
     networks:
       - florescer
   
-  jenkins:
-    image: jenkins/jenkins:2.414.1-lts-jdk17
-    container_name: jenkins
-    ports:
-      - 9090:8080
-    volumes:
-      - jenkins_home:/var/jenkins_home
+  #jenkins:
+    #image: jenkins/jenkins:2.414.1-lts-jdk17
+    #container_name: jenkins
+    #ports:
+      #- 9090:8080
+      #- 8080:8081
+    #networks:
+      #- florescer  
+    #volumes:
+      #- jenkins_home:/var/jenkins_home
 
 volumes:
   jenkins_home:
