--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 HELP.md
-#target/
-target/classes
-target/test-classes
+target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
